--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
   <meta keywords="Blender, 3D Render, J. M Areeb Uzair">
   <meta name="description" content="Various artworks made using the free, open-source software Blender">
   <title>My Portfolio</title>
+
+  <script type="text/javascript">
+    (function (l) {
+      if (l.search[1] === "/") {
+        var decoded = l.search
+          .slice(1)
+          .split("&")
+          .map(function (s) {
+            return s.replace(/~and~/g, "&");
+          })
+          .join("?");
+        window.history.replaceState(null, null, l.pathname.slice(0, -1) + decoded + l.hash);
+      }
+    })(window.location);
+  </script>
+
 </head>
 
 <body>
