--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html lang="en">
 
 <head>
+  <title>My Blender Portfolio</title>
+  <meta property="og:title" content="My Blender Portfolio">
+  <meta property="og:description" content="Various artworks made using the free, open-source software Blender">
+  <meta property="og:image" content="https://areebuzair.github.io/BlenderArtPortfolio/Assets/ogpimage.jpg">
+  <meta property="og:url" content="https://areebuzair.github.io/BlenderArtPortfolio/">
+  <meta property="og:type" content="website">
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="./SVGs/Double A Logo SVG.svg" />
+  <link rel="icon" type="image/jpg" href="./Assets/DoubleAFavicon.jpg" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta author="J. M Areeb Uzair">
-  <meta keywords="Blender, 3D Render, J. M Areeb Uzair">
+  <meta keywords="Blender, 3D Render, J. M Areeb Uzair, VFX">
   <meta name="description" content="Various artworks made using the free, open-source software Blender">
-  <title>My Portfolio</title>
 
   <script type="text/javascript">
     (function (l) {
