Added image link

--- a/public/404.html
+++ b/public/404.html
@@ -8,7 +8,7 @@
   <meta property="og:image" content="https://areebuzair.github.io/BlenderArtPortfolio/Assets/ogpimage.jpg">
   <meta property="og:url" content="https://areebuzair.github.io/BlenderArtPortfolio/">
   <meta property="og:type" content="website">
-  <title>React Router</title>
+  <title>My Blender Portfolio</title>
   <script type="text/javascript">
     var pathSegmentsToKeep = 1;
 
