--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta property="og:url" content="https://areebuzair.github.io/BlenderArtPortfolio/">
   <meta property="og:type" content="website">
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/jpg" href="./Assets/DoubleAFavicon.png" />
+  <link rel="icon" type="image/svg+xml" href="/Assets/DoubleA Logo.svg" />
   <meta http-equiv="Permissions-Policy" content="interest-cohort=()">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta author="J. M Areeb Uzair">
